Changes in Release 2.2.4
=============================================
[JOST-69] - BasicSAMLArtifactMap dereferences a pointer that might be null
[JOST-76] - Relax requirement that HTTP requests be GETs when using Redirect and Artifact Binding
[JOST-77] - Metadata refresh causes ConcurrentModificationException and idp failure
[JOST-78] - Update libs for 2.2.4 release
[JOST-79] - StatusDetail builder is missing from saml2-protocol-config.properties file

Changes in Release 2.2.3
=============================================
[JOST-70] - ActionType typo in xacml20-context-config.xml
[JOST-71] - Wrong localname in StatusMessageTypeImplBuilder 
[JOST-72] - XACMLAuthzDecisionQuery : returncontext attribute not handled properly by marshaller
* Add various XACML constants
* Major memory usage improvements
* Pick up latest version of libs


Changes in Release 2.2.2
=============================================
[JOST-66] Cleanup ArtifactMap related classes
[JOST-67] SAML 1 and 2 POST encoders rely on system encoding when providing the bytes for Base64 encoding
* Update logging libraries to grab some bug fixes

Changes in Release 2.2.1
=============================================
[JOST-64] - Multiple calls to ChainingMetadataProvider#getMetadata result in "EntitiesDescriptor is already the child of another XMLObject" exception

Changes in Release 2.2.0
=============================================
[JOST-32] - MetadataSignatureFilter should verify signatures on RoleDescriptor and AffiliationDescriptor elements
[JOST-35] - some XACML elements not correctly marshalled
[JOST-37] - inline policies in XACML policy sets cannot be unmarshalled
[JOST-38] - Marshalling problem for AttributeAssignmentType
[JOST-39] - ReferencedPolicies not used correctly
[JOST-40] - Misspelled method name in ReferencedPoliciesType
[JOST-42] - Missing function for PolicySetType choice group
[JOST-43] - Method setExpression() of class ExpressionType doesn't work